AC_INIT(configure.in)
AM_INIT_AUTOMAKE(scum,0.0.2)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_ARG_WITH(fltk-config,
AC_HELP_STRING([--with-fltk-config],[location of the fltk-config script]),
[FLTK_CONFIG=$withval],[FLTK_CONFIG="fltk-config"])

AC_ARG_ENABLE(debug,
AC_HELP_STRING([--enable-debug],[enable debugging support]),
  [],[enable_debug=no])

dnl AC_ARG_WITH(cairo,
dnl   AC_HELP_STRING([--with-cairo],[enable cairo support]),
dnl   [use_cairo=$withval],[use_cairo=yes])

dnl AC_ARG_WITH(glitz,
dnl AC_HELP_STRING([--with-glitz],[disable glitz support]),
dnl   [use_glitz=$withval],[use_glitz=yes])

PKG_CHECK_MODULES(PACKAGE,["howl"])
dnl PKG_CHECK_MODULES(PACKAGE,["libsclang"])

dnl if test "$use_cairo" = "yes"; then
dnl    PKG_CHECK_MODULES(CAIRO,[cairo],[HAVE_CAIRO=true],[HAVE_CAIRO=false])
dnl else
dnl    HAVE_CAIRO=false
dnl fi
dnl 
dnl AM_CONDITIONAL(HAVE_CAIRO,$HAVE_CAIRO)
dnl 
dnl if $HAVE_CAIRO; then
dnl    PACKAGE_CFLAGS="$PACKAGE_CFLAGS $CAIRO_CFLAGS"
dnl    PACKAGE_LIBS="$PACKAGE_LIBS $CAIRO_LIBS"
dnl    AC_DEFINE([HAVE_CAIRO],[1],[Cairo])
dnl else
dnl    AC_DEFINE([HAVE_CAIRO],[0],[Cairo])
dnl fi
dnl 
dnl if test "$HAVE_CAIRO" = "true" -a "$use_glitz" = "yes"; then
dnl    PKG_CHECK_MODULES(GLITZ,[glitz,glitz-glx],[HAVE_GLITZ=true],[HAVE_GLITZ=false])
dnl else
dnl    HAVE_GLITZ=false
dnl fi
dnl 
dnl if $HAVE_GLITZ; then
dnl    PACKAGE_CFLAGS="$PACKAGE_CFLAGS $GLITZ_CFLAGS"
dnl    PACKAGE_LIBS="$PACKAGE_LIBS $GLITZ_LIBS"
dnl    AC_DEFINE([HAVE_GLITZ],[1],[glitz support])
dnl else
dnl    AC_DEFINE([HAVE_GLITZ],[0],[glitz support])
dnl fi

if ! which "${FLTK_CONFIG}" &>/dev/null; then
    AC_MSG_ERROR([flkt-config not found])
fi

if test "$enable_debug" = "yes"; then
    PACKAGE_DEBUG_CFLAGS="-g -DSCUM_DEBUG"
else
    PACKAGE_DEBUG_CFLAGS="-DNDEBUG"
fi

#fltk_config_args="--use-gl --use-images"
fltk_config_args="--use-gl"
FLTK_CFLAGS="$(${FLTK_CONFIG} ${fltk_config_args} --cflags)"
FLTK_LIBS="$(${FLTK_CONFIG} ${fltk_config_args} --ldstaticflags)"

PACKAGE_CFLAGS="${PACKAGE_CFLAGS} -D_REENTRANT -Wno-unknown-pragmas ${PACKAGE_DEBUG_CFLAGS} ${FLTK_CFLAGS}"
PACKAGE_LIBS="${PACKAGE_LIBS} ${FLTK_LIBS}"
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_SUBST(FLTK_CONFIG)

AC_OUTPUT([
Makefile
src/Makefile
])

dnl EOF
