MAINTAINERCLEANFILES = Makefile.in

AM_CXXFLAGS	= $(PACKAGE_CFLAGS)
bin_PROGRAMS	= sclangx

noinst_HEADERS = \
SCUM_Button.hh \
SCUM_Color.hh \
SCUM_Container.hh \
SCUM_Desktop.hh \
SCUM_FLApp.hh \
SCUM_Font.hh \
SCUM_GL.hh \
SCUM_Graph.hh \
SCUM_Geometry.hh \
SCUM_Image.hh \
SCUM_Lang.hh \
SCUM_Menu.hh \
SCUM_NSKey.h \
SCUM_Prim.hh \
SCUM_Slider.hh \
SCUM_ScrollView.hh \
SCUM_Symbol.hh \
SCUM_System.hh \
SCUM_Text.hh \
SCUM_View.hh \
SCUM_ViewFactory.hh \
SCUM_Window.hh

sclangx_SOURCES	= \
SCUM_Button.cpp \
SCUM_Container.cpp \
SCUM_Desktop.cpp \
SCUM_FLApp.cpp \
SCUM_FLSystem.cpp \
SCUM_Font.cpp \
SCUM_GL.cpp \
SCUM_Graph.cpp \
SCUM_Image.cpp \
SCUM_Lang.cpp \
SCUM_Menu.cpp \
SCUM_Prim.cpp \
SCUM_Slider.cpp \
SCUM_ScrollView.cpp \
SCUM_Symbol.cpp \
SCUM_System.cpp \
SCUM_Text.cpp \
SCUM_View.cpp \
SCUM_ViewFactory.cpp \
SCUM_Window.cpp

sclangx_LDADD	= $(PACKAGE_LIBS)

# EOF
